<resources>
    <string name="app_name">SeniorDialer</string>
    <string name="hint">Enter the Number</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="star">*</string>
    <string name="hash">#</string>
    <string name="X">X</string>
    <string name="dial">Dial</string>
    <string name="button">Button</string>

    <string name="Save_Num_1">Save 1</string>
    <string name="Save_Num_2">Save 2</string>
    <string name="Save_Num_3">Save 3</string>
    <string name="Save_Num_4">Save 4</string>
    <string name="Save_Num_5">Save 5</string>
    <string name="Save_Num_6">Save 6</string>
    <string name="Save_Num_7">Save 7</string>
    <string name="Save_Num_8">Save 8</string>
    <string name="Save_Num_9">Save 9</string>

    <string name="Ret_Num_1">Retrieve 1</string>
    <string name="Ret_Num_2">Retrieve 2</string>
    <string name="Ret_Num_3">Retrieve 3</string>
    <string name="Ret_Num_4">Retrieve 4</string>
    <string name="Ret_Num_5">Retrieve 5</string>
    <string name="Ret_Num_6">Retrieve 6</string>
    <string name="Ret_Num_7">Retrieve 7</string>
    <string name="Ret_Num_8">Retrieve 8</string>
    <string name="Ret_Num_9">Retrieve 9</string>

</resources>
