<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hint"
            android:importantForAutofill="no"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/X"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonOne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/one"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/two"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonThree"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/three"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonFour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/four"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonFive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/five"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/six"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/seven"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonEight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/eight"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonNine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/nine"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonStar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/star"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonZero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/zero"
            android:textSize="70sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonHash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/hash"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sixth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDial"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:fontFamily="sans-serif-black"
            android:onClick="onDial"
            android:textSize="70sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>